# remind_bot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-12-codex-automation-harness.md  2026-07-12-global-codex-subagents.md  2026-07-12-multi-agent-workflow.md  (+8 more)
src/lack_bot/: __init__.py  __main__.py  cli.py  config.py  detector.py  models.py  runner.py
src/lark_bot/: __init__.py  __main__.py  cli.py  codex_app_server.py  codex_gateway.py  codex_interactive.py  codex_models.py  codex_orchestrator.py  codex_remote_probe.py  codex_tui.py  config.py  daemon.py  detector.py  hooks.py  lark_control.py  models.py  redaction.py  runner.py
tests/: conftest.py  test_agent_api.py  test_agent_events.py  test_agent_hooks.py  test_agent_modules.py  test_agent_storage.py  test_claude_adapter.py  test_claude_hook_installer.py  test_claude_hooks.py  test_claude_sdk.py  test_claude_sessions.py  test_cli_claude.py  test_cli_codex.py  test_codex_adapter.py  test_codex_app_server.py  test_codex_gateway.py  test_codex_hook_adapter.py  test_codex_hooks.py  test_codex_interactive.py  test_codex_models.py  test_codex_modules.py  test_codex_orchestrator.py  test_codex_remote_probe.py  test_codex_storage.py  test_codex_tui.py  test_config.py  test_daemon_core.py  test_detector.py  test_hooks.py  test_lark_control.py  test_lark_modules.py  test_lark_payload.py  test_lark_render.py  test_notification_modules.py  test_package_structure.py  test_redaction.py  test_runner.py  test_session_concurrency.py  test_storage_sqlite.py  test_task_modules.py
(+133 files in other folders)
