[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lark-bot"
version = "0.1.0"
description = "A local Lark/Feishu notification companion for code agent tasks."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lark Bot contributors" }]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
redis = ["redis>=5.0"]

[project.scripts]
lark-bot = "lark_bot.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[tool.hatch.build.targets.wheel]
packages = ["src/lark_bot"]
